--- a/package.json
+++ b/package.json
@@ -6,17 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start-db": "ts-node ./src/db/db.ts",
+    "migrate-db": "ts-node ./src/db/migrate.ts",
+    "generate-db-schema": "kysely-codegen --dialect sqlite"
   },
   "dependencies": {
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "better-sqlite3": "^8.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "kysely": "^0.26.1",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/better-sqlite3": "^7.6.4",
+    "kysely-codegen": "^0.10.1",
+    "ts-node": "^10.9.1"
   }
 }
