--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint",
     "start-db": "ts-node ./src/db/db.ts",
     "migrate-db": "ts-node ./src/db/migrate.ts",
-    "generate-db-schema": "kysely-codegen --dialect sqlite"
+    "generate-db-schema": "kysely-codegen --dialect sqlite",
+    "start-graphql": "ts-node ./src/graphql/index.ts"
   },
   "dependencies": {
+    "@apollo/server": "^4.8.1",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "better-sqlite3": "^8.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "graphql": "^16.7.1",
     "kysely": "^0.26.1",
     "next": "13.4.10",
+    "npm": "^9.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
