--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "generate-db-schema": "kysely-codegen --dialect sqlite",
     "start-graphql": "ts-node ./src/graphql/index.ts",
     "generate-gql-types": "graphql-codegen --config codegen.ts",
-    "scrape": "ts-node ./src/scrapers/index.ts"
+    "scrape": "ts-node -r tsconfig-paths/register ./src/scrapers/index.ts",
+    "test": "jest",
+    "start-all": "npm-run-all --parallel start-graphql scrape"
   },
   "dependencies": {
     "@apollo/client": "^3.8.0",
@@ -35,13 +37,21 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.11",
+    "@babel/preset-env": "^7.22.14",
+    "@babel/preset-typescript": "^7.22.11",
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/client-preset": "4.1.0",
     "@graphql-codegen/typescript": "4.0.1",
     "@graphql-codegen/typescript-document-nodes": "^4.0.1",
     "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@types/better-sqlite3": "^7.6.4",
+    "@types/jest": "^29.5.4",
+    "babel-jest": "^29.6.4",
+    "jest": "^29.6.4",
     "kysely-codegen": "^0.10.1",
-    "ts-node": "^10.9.1"
+    "npm-run-all": "^4.1.5",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0"
   }
 }
